Closes Issue#1026 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -165,9 +165,9 @@
                                     <p:tab title="10) Category-vice Movement Report">
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="1) Movement Report Stock By Date" action="pharmacy_report_category_vice_movement.xhtml" />
+                                                             value="1) Movement Report Stock By Date" action="#{pharmacySaleReport.navigatePharmacyReportCategoryViceMovement()}" />
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="2)Movement Report Stock By Date-By Batch" action="pharmacy_report_category_vice_movement_item_batch.xhtml" />
+                                                             value="2)Movement Report Stock By Date-By Batch" action="#{pharmacySaleReport.navigatePharmacyReportCategoryViceMovementItemBach()}" />
 
                                         </div>
                                     </p:tab>
