Close Issue#1028 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -174,7 +174,7 @@
                                     <p:tab title="11)Summary All Report">
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="1) Pharmacy All Report" action="pharmacy_report_summery_all.xhtml" />
+                                                             value="1) Pharmacy All Report" action="#{pharmacySaleReport.navigatePharmacyReportSummaryAll()}" />
 
                                         </div>
                                     </p:tab>
