Closes Issue#1028 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -181,7 +181,7 @@
                                     <p:tab title="12)Pharmacy Return Without Traising">
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="1) Pharmacy Return Without Traising" action="pharmacy_report_grn_detail_1.xhtml" />
+                                                             value="1) Pharmacy Return Without Traising" action="#{pharmacySaleReport.navigatePharmacyReportGrnDetail1()}" />
 
                                         </div>
                                     </p:tab>
