Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -197,7 +197,7 @@
                                     <p:tab title="14)Pharmacy WholeSale Repot">
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="1) Pharmacy WholeSale Credit Bills" action="#{pharmacySaleReport.navigatePharmacyReportCredit} />
+                                                             value="1) Pharmacy WholeSale Credit Bills" action="#{pharmacySaleReport.navigatePharmacyReportCredit}" />
 
                                         </div>
                                     </p:tab>
