--- a/src/main/webapp/resources/inward/bht.xhtml
+++ b/src/main/webapp/resources/inward/bht.xhtml
@@ -16,7 +16,7 @@
     <cc:implementation>
         <h:form>
 
-            <p:commandButton value="Print" styleClass="noPrintButton" ajax="false" action="#" >
+            <p:commandButton class="my-1" value="Print" ajax="false" action="#" >
                 <p:printer target="gpBillPreview" ></p:printer>
             </p:commandButton>
 
