closes #1036 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/inward/inward_edit_bht.xhtml
+++ b/src/main/webapp/inward/inward_edit_bht.xhtml
@@ -105,7 +105,7 @@
                                                     class="w-100 mx-2"  >
                                     </p:autoComplete>
                                     <p:outputLabel value="Admission Type "/>
-                                    <h:outputLabel value="#{bhtEditController.current.admissionType.name}"/>                               
+                                    <h:outputLabel class="mx-2" value="#{bhtEditController.current.admissionType.name}"/>                               
                                     <h:outputLabel value="Select  Admission Paymentmethod"/>
                                     <p:selectOneMenu  class="mx-2 w-100" id="cmbPs" value="#{bhtEditController.current.paymentMethod}"  >
                                         <f:selectItem itemLabel="Select Payment Method" />                           
