--- a/src/main/webapp/inward/inward_appointment.xhtml
+++ b/src/main/webapp/inward/inward_appointment.xhtml
@@ -20,12 +20,13 @@
             <h:form id="form">
 
                 <h:panelGroup rendered="#{!appointmentController.printPreview}" styleClass="alignTop" >
-                    <p:panel style="min-height: 600px; position:relative;"  >
+                    <p:panel >
 
                         <f:facet name="header" >
                             <h:panelGrid columns="17"  >
                                 <h:outputLabel value="Appointment" />
-                                <h:outputLabel value="&nbsp;&nbsp;&nbsp;&nbsp;" style="min-width: 50px;" />
+                                <h:outputLabel value="&nbsp;&nbsp;&nbsp;&nbsp;"/>
+                                
                                 <p:selectOneMenu   id="cmbPs" value="#{appointmentController.currentBill.paymentMethod}">                                                                     
                                     <f:selectItems value="#{enumController.paymentMethodsWithoutCredit}"/>
                                     <p:ajax process="cmbPs" update="pBillDetails creditCard cheque slip" event="change" />
@@ -43,16 +44,15 @@
                                     <pa:slip paymentMethodData="#{appointmentController.paymentMethodData}"/>
                                 </h:panelGroup>
 
-                                <p:commandButton  value="Settle" action="#{appointmentController.settleBill}" ajax="false"  style="width: 150px; padding: 1px;border: 1px solid ; margin: auto;" onclick="onSubmitButton();" class="m-1">
+                                <p:commandButton  value="Settle" action="#{appointmentController.settleBill}" ajax="false"  onclick="onSubmitButton();" class="m-1">
                                 </p:commandButton>
-                                <p:commandButton value="New Bill" ajax="false" action="#{appointmentController.prepareNewBill()}" onclick="onSubmitButton();" class="m-1">
+                                <p:commandButton value="New Bill" ajax="false" action="#{appointmentController.prepareNewBill()}" onclick="onSubmitButton();">
                                 </p:commandButton>
 
                             </h:panelGrid>
 
                         </f:facet>
-
-
+                        
                         <div class="row">
                             <div class="col-md-6">
                                 <h:panelGrid columns="1" >
@@ -60,11 +60,11 @@
                                     <p:panel>
                                         <h:panelGroup id="panelPatient" >
 
-                                            <p:tabView id="tvPt" style="min-height: 250px;"  >
+                                            <p:tabView id="tvPt">
                                                 <p:ajax event="tabChange"  process="@this" listener="#{appointmentController.onTabChange}" />
 
-                                                <p:tab id="tabNewPt" title="New Patient"  >
-                                                    <ez:patientDetail controller="#{appointmentController}"/>
+                                                <p:tab  id="tabNewPt" title="New Patient"  >
+                                                    <ez:patientDetail  controller="#{appointmentController}"/>
                                                 </p:tab>
                                                 <p:tab id="tabSearchPt" title="Search Patient">
 
@@ -73,7 +73,7 @@
                                                                         value="#{appointmentController.searchedPatient}" 
                                                                         completeMethod="#{patientController.completePatient}" 
                                                                         var="apt" itemLabel="#{apt.person.name}" 
-                                                                        itemValue="#{apt}" size="30"  style="width: 400px;" required="true" requiredMessage="please Select the Patient">
+                                                                        itemValue="#{apt}" size="30" required="true" requiredMessage="please Select the Patient">
                                                             <f:ajax event="itemSelect" execute="acPt" render="panSearch"/>
                                                         </p:autoComplete>
 
@@ -81,17 +81,17 @@
 
                                                         <h:panelGrid id="panSearch" columns="2" >
                                                             <h:outputLabel  rendered="#{appointmentController.searchedPatient!=null}" value="Name" />
-                                                            <h:outputLabel rendered="#{appointmentController.searchedPatient!=null}" value="#{appointmentController.searchedPatient.person.name}" ></h:outputLabel>
+                                                            <h:outputLabel class="mx-2" rendered="#{appointmentController.searchedPatient!=null}" value="#{appointmentController.searchedPatient.person.name}" ></h:outputLabel>
                                                             <h:outputLabel  rendered="#{appointmentController.searchedPatient!=null}" value="Sex" />
-                                                            <h:outputLabel rendered="#{appointmentController.searchedPatient!=null}" value="#{appointmentController.searchedPatient.person.sex}" ></h:outputLabel>
+                                                            <h:outputLabel class="mx-2" rendered="#{appointmentController.searchedPatient!=null}" value="#{appointmentController.searchedPatient.person.sex}" ></h:outputLabel>
                                                             <h:outputLabel  rendered="#{appointmentController.searchedPatient!=null}" value="DOB"  />
 
-                                                            <h:outputLabel rendered="#{appointmentController.searchedPatient!=null}" value="#{appointmentController.searchedPatient.person.dob}">
+                                                            <h:outputLabel class="mx-2" rendered="#{appointmentController.searchedPatient!=null}" value="#{appointmentController.searchedPatient.person.dob}">
                                                                 <f:convertDateTime pattern="dd/MM/yy" />
                                                             </h:outputLabel>
 
                                                             <h:outputLabel  rendered="#{appointmentController.searchedPatient!=null}" value="Adress" />
-                                                            <p:inputTextarea rendered="#{appointmentController.searchedPatient!=null}" value="#{appointmentController.searchedPatient.person.address}" />
+                                                            <p:inputTextarea class="mx-2" rendered="#{appointmentController.searchedPatient!=null}" value="#{appointmentController.searchedPatient.person.address}" />
                                                         </h:panelGrid>
                                                     </h:panelGrid>
 
@@ -145,7 +145,7 @@
                                                 <p:tab title="Refering Doctor" id="rdr">
                                                     <p:autoComplete forceSelection="true" id="cmbDoc" value="#{appointmentController.currentBill.referredBy}" completeMethod="#{doctorController.completeDoctor}" var="ix" itemLabel="#{ix.person.name}" itemValue="#{ix}" size="30"  style="width: 400px;">
                                                     </p:autoComplete>
-                                                    <p:commandButton id="btnAddNewDoc" type="button" value="Add New Doctor" onclick="dlg.show();" actionListener="#{doctorController.prepareAdd}" process="btnAddNewDoc" update="#{p:resolveFirstComponentWithId('panDoc',view).clientId}" >
+                                                    <p:commandButton class="my-1" id="btnAddNewDoc" type="button" value="Add New Doctor" onclick="dlg.show();" actionListener="#{doctorController.prepareAdd}" process="btnAddNewDoc" update="#{p:resolveFirstComponentWithId('panDoc',view).clientId}" >
                                                         <p:resetInput target="panelBillReferrals"/>
                                                     </p:commandButton>  
 
