--- a/src/main/webapp/inward/inward_bill_outside_charge.xhtml
+++ b/src/main/webapp/inward/inward_bill_outside_charge.xhtml
@@ -30,9 +30,8 @@
                     <div class="row w-100">
                         <div class="col-6 ">
                             <p:panel header="BHT">
-
                                 <div class="row w-100">
-                                    <div class="col-6">
+                                    <div class="col-6 d-flex">
                                         <p:autoComplete  widgetVar="aPt" id="acPt" forceSelection="true" 
                                                          value="#{inwardAdditionalChargeController.current.patientEncounter}"
                                                          completeMethod="#{admissionController.completePatient}" 
@@ -53,21 +52,23 @@
                                                 <h:outputLabel value="#{myItem.currentPatientRoom.roomFacilityCharge.name}"/>
                                             </p:column>
                                         </p:autoComplete> 
+                                        <div class="mx-2">
+                                            <p:commandButton value="Select" ajax="false" >
+                                            </p:commandButton>
+                                        </div>
+
                                     </div>
 
-                                    <div class="col-6">
-                                        <p:commandButton value="Select" ajax="false" >
-                                        </p:commandButton>
-                                    </div>
+
                                 </div>
 
                                 <div class="row my-4">
                                     <h:panelGroup id="panSearch2">
-                                    <in:bhtDetail admission="#{inwardAdditionalChargeController.current.patientEncounter}"/>
-                                </h:panelGroup>                   
+                                        <in:bhtDetail admission="#{inwardAdditionalChargeController.current.patientEncounter}"/>
+                                    </h:panelGroup>                   
                                 </div>
-                                
-                                
+
+
                             </p:panel>
                         </div>
 
@@ -93,7 +94,7 @@
                                         <div class="col-4 d-flex align-items-center">
                                             <h:outputLabel value="From Institution"/>
                                         </div>
-                                        <div class="col-8">
+                                        <div class="col-8 ">
                                             <p:autoComplete class="w-100" forceSelection="true" value="#{inwardAdditionalChargeController.current.fromInstitution}"
                                                             completeMethod="#{institutionController.completeIns}"
                                                             var="ix" itemLabel="#{ix.name}" itemValue="#{ix}" >
