Close Issue#1048 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/membership/reports.xhtml
+++ b/src/main/webapp/membership/reports.xhtml
@@ -15,20 +15,35 @@
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
 
-                <h:panelGroup >
-                    <h:form  >
-                        <p:growl />
-                        <p:panel header="Membership Reports" >
+                <p:panel header="Membership Reports" >
+                    <div class="row">
+                        <div class="col-md-3">
+                            <p:accordionPanel>
+                                <p:tab>
+                                    <h:form>
+                                        <div class="d-grid gap-2">
+                                            <p:commandButton  action="/membership/report_inward" value="Inward MemberShip Report"  ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipInwardMemberShipInwardMemberShipReport')}"/>
+                                            <p:commandButton  action="/membership/report_opd" value="Opd MemberShip Report"  ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipOpdMemberShipDisOpdMemberShipReport')}"/>
 
-                            
-                                    <p:panelGrid columns="1" >
-                                        <p:commandButton  action="/membership/report_inward" value="Inward MemberShip Report"  ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipInwardMemberShipInwardMemberShipReport')}"/>
-                                        <p:commandButton  action="/membership/report_opd" value="Opd MemberShip Report"  ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipOpdMemberShipDisOpdMemberShipReport')}"/>
-                                    </p:panelGrid>
+                                        </div>
+                                    </h:form>
 
-                        </p:panel>
-                    </h:form>
-                </h:panelGroup>
+
+                                </p:tab>
+                            </p:accordionPanel>
+
+
+
+                        </div>
+                        <div class="col-md-9">
+                            <ui:insert name="subcontent" >
+
+                            </ui:insert>
+                        </div>
+                    </div>
+
+
+                </p:panel>
             </ui:define>
         </ui:composition>
     </h:body>
