--- a/src/main/webapp/membership/report_inward.xhtml
+++ b/src/main/webapp/membership/report_inward.xhtml
@@ -11,23 +11,40 @@
         <ui:composition template="/resources/template/template.xhtml">
 
             <ui:define name="content">
+                <div class="row">
+                    <div class="col-md-3">
+                        <p:accordionPanel>
+                            <p:tab title="Payment Method">
+                                <h:form>
+                                    <div class="d-grid gap-2">
+                                        <p:commandButton action="/membership/report_inward_cash_by_payment_method" value="Membership Scheme By Payment Method"  styleClass="linkButton" ajax="false"  />                              
+                                        <p:commandButton action="/membership/report_inward_cash_by_payment_method_member_ship" value="Membership Scheme By Payment Method With Membership Scheme"  styleClass="linkButton" ajax="false"  />                              
 
-                <h:form>
-                    <h:panelGrid columns="3"  >
+                                    </div>
+                                </h:form>
 
-                        <p:panel header="Payment Method">
-                            <p:commandButton action="/membership/report_inward_cash_by_payment_method" value="Membership Scheme By Payment Method"  styleClass="linkButton" ajax="false"  />                              
-                            <p:commandButton action="/membership/report_inward_cash_by_payment_method_member_ship" value="Membership Scheme By Payment Method With Membership Scheme"  styleClass="linkButton" ajax="false"  />                              
-                        </p:panel>
 
-                        <p:panel header="Credit Institution">
-                            <p:commandButton action="/membership/report_inward_discount_scheme_by_credit_institution" value="Discount Scheme By Credit Institution"  styleClass="linkButton" ajax="false"  />                              
-                            <p:commandButton action="/membership/report_inward_member_scheme_by_credit_institution" value="Membership Scheme By Credit Institution"  styleClass="linkButton" ajax="false"  />                              
-                        </p:panel>
+                            </p:tab>
+                            <p:tab title="Credit Institution">
+                                <h:form>
+                                    <div class="d-grid gap-2">
+                                        <p:commandButton action="/membership/report_inward_discount_scheme_by_credit_institution" value="Discount Scheme By Credit Institution"  styleClass="linkButton" ajax="false"  />                              
+                                        <p:commandButton action="/membership/report_inward_member_scheme_by_credit_institution" value="Membership Scheme By Credit Institution"  styleClass="linkButton" ajax="false"  />                              
+                                    </div>
+                                </h:form>
 
-                    </h:panelGrid>
 
-                </h:form>
+                            </p:tab>
+                        </p:accordionPanel>
+                    </div>
+                    <div class="col-md-9">
+                        <ui:insert name="subContent" >
+
+                        </ui:insert>
+                    </div>
+                </div>
+
+
             </ui:define>
 
 
