--- a/src/main/webapp/membership/report_inward_cash_by_payment_method.xhtml
+++ b/src/main/webapp/membership/report_inward_cash_by_payment_method.xhtml
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/membership/report_inward.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ca="http://java.sun.com/jsf/composite/cashSummery"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:define name="content">
+    <ui:define name="subContent">
         <h:form id="panelPrint" >
             <p:panel>
               
